Mit Colab erstellt

--- a/week6_files/seq2seq_NMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week6_files/seq2seq_NMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -1833,23 +1833,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
-        "id": "meHcb9oOi_YN"
+        "id": "meHcb9oOi_YN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8aba6a7b-7daf-431d-c0b6-b9ef48badfab"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\tTest Loss: 7.427\tTest PPL: 1681.099\n",
+            "\tTest BLEU: 0.00\n"
+          ]
+        }
+      ],
       "source": [
         "#NOTE: load model from file\n",
-        "#model.load_state_dict(torch.load('model.pt'))\n",
+        "model.load_state_dict(torch.load('model.pt', map_location=device))\n",
         "\n",
         "test_loss = evaluate(model, test_iter, criterion)\n",
+        "bleu = compute_bleu(model, test_iter, de_vocab, device)\n",
         "\n",
-        "print(f'\\tTest Loss: {test_loss:.3f}\\tTest PPL: {np.exp(test_loss):7.3f}')"
+        "print(f'\\tTest Loss: {test_loss:.3f}\\tTest PPL: {np.exp(test_loss):7.3f}')\n",
+        "print(f'\\tTest BLEU: {bleu:.2f}')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "#NB: bad results:\n",
+        "#solution:\n",
+        "    #increase train_data = train_data[:20000]"
+      ],
+      "metadata": {
+        "id": "J0HEYVm0u1lG"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
       "metadata": {
         "id": "g7dql_q_i_YN"
       },
