Mit Colab erstellt

--- a/week6_files/seq2seq_NMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week6_files/seq2seq_NMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -42,12 +42,12 @@
       "metadata": {
         "id": "FvIhSmCUcDN4"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "qxTE-EePi_YH"
       },
@@ -65,10 +65,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "dKtvwA_Rji-B",
-        "outputId": "7f181de2-2a8e-4aa1-b30d-094e8cb45acd",
+        "outputId": "9b6cea92-e172-4d57-b055-94be1d075b1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -79,12 +79,13 @@
           "name": "stdout",
           "text": [
             "Cloning into 'BMT_2025S'...\n",
-            "remote: Enumerating objects: 360, done.\u001b[K\n",
-            "remote: Counting objects: 100% (112/112), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (111/111), done.\u001b[K\n",
-            "remote: Total 360 (delta 68), reused 1 (delta 1), pack-reused 248 (from 2)\u001b[K\n",
-            "Receiving objects: 100% (360/360), 12.84 MiB | 13.67 MiB/s, done.\n",
-            "Resolving deltas: 100% (150/150), done.\n",
+            "remote: Enumerating objects: 372, done.\u001b[K\n",
+            "remote: Counting objects: 100% (30/30), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
+            "remote: Total 372 (delta 18), reused 8 (delta 8), pack-reused 342 (from 4)\u001b[K\n",
+            "Receiving objects: 100% (372/372), 90.15 MiB | 15.28 MiB/s, done.\n",
+            "Resolving deltas: 100% (152/152), done.\n",
+            "Updating files: 100% (43/43), done.\n",
             "/content/BMT_2025S/week6_files\n"
           ]
         }
@@ -107,7 +108,7 @@
       "metadata": {
         "id": "Xr1-PPWBrPxl"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -120,9 +121,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "88dbcf08-d1da-49d3-dc82-6e111edbc3a1"
+        "outputId": "3acb2f72-816f-4465-da0b-f9a8689761fa"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "jXnagBYmi_YI"
       },
@@ -768,9 +769,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7-QhBRQ0JEwO",
-        "outputId": "42d4d93b-5f5c-4a92-c2b3-d08e7d2a2923"
+        "outputId": "e447cbd9-f04f-4ddd-ff42-46310c2f79f8"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -802,7 +803,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -829,7 +830,7 @@
       "metadata": {
         "id": "lFDXjJpt1Mo_"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -840,12 +841,12 @@
       ],
       "metadata": {
         "id": "bvQO-u6g1xB3",
-        "outputId": "672c922d-916a-4625-feb9-413d16afbf2f",
+        "outputId": "055166d3-6fde-498d-e621-59d2baed39ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,13 +860,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "gjVU2ynri_YJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2e232ce9-a13c-46c8-d7d0-2f317d5480b4"
+        "outputId": "f138cb7b-dc79-41c4-c59f-db78cf2d8083"
       },
       "outputs": [
         {
@@ -939,36 +940,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "id": "Wo6Mz24Itw7B"
       },
       "outputs": [],
       "source": [
-        "#NOTE: if you are low on credits or testing only use a piece of the data e.g. 1K segments\n",
-        "train_data = train_data[:1000]"
+        "#NOTE: if you are low on credits or testing only use a piece of the data e.g. 1K segments (for trying; 20k for final training)\n",
+        "train_data = train_data[:20000]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G8FHO7cfuHz_",
-        "outputId": "f6720f84-9aea-451f-896a-0f8ddb71247a"
+        "outputId": "50aba66b-82be-419d-cc7a-3e91d9724f68"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1000"
+              "20000"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 12
         }
       ],
       "source": [
