Mit Colab erstellt

--- a/week6_files/seq2seq_NMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week6_files/seq2seq_NMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -68,7 +68,7 @@
       "execution_count": 3,
       "metadata": {
         "id": "dKtvwA_Rji-B",
-        "outputId": "9b6cea92-e172-4d57-b055-94be1d075b1f",
+        "outputId": "acfc499a-684f-4403-d229-16c719656ca0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -79,13 +79,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'BMT_2025S'...\n",
-            "remote: Enumerating objects: 372, done.\u001b[K\n",
-            "remote: Counting objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (22/22), done.\u001b[K\n",
-            "remote: Total 372 (delta 18), reused 8 (delta 8), pack-reused 342 (from 4)\u001b[K\n",
-            "Receiving objects: 100% (372/372), 90.15 MiB | 15.28 MiB/s, done.\n",
-            "Resolving deltas: 100% (152/152), done.\n",
-            "Updating files: 100% (43/43), done.\n",
+            "remote: Enumerating objects: 376, done.\u001b[K\n",
+            "remote: Counting objects: 100% (34/34), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (26/26), done.\u001b[K\n",
+            "remote: Total 376 (delta 21), reused 8 (delta 8), pack-reused 342 (from 4)\u001b[K\n",
+            "Receiving objects: 100% (376/376), 90.16 MiB | 12.00 MiB/s, done.\n",
+            "Resolving deltas: 100% (155/155), done.\n",
             "/content/BMT_2025S/week6_files\n"
           ]
         }
@@ -121,7 +120,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3acb2f72-816f-4465-da0b-f9a8689761fa"
+        "outputId": "5fcd9f56-c461-456b-f322-9b11b824794b"
       },
       "execution_count": 5,
       "outputs": [
@@ -769,7 +768,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7-QhBRQ0JEwO",
-        "outputId": "e447cbd9-f04f-4ddd-ff42-46310c2f79f8"
+        "outputId": "582835f5-cea6-4b95-de98-e7edc5be9613"
       },
       "execution_count": 7,
       "outputs": [
@@ -841,7 +840,7 @@
       ],
       "metadata": {
         "id": "bvQO-u6g1xB3",
-        "outputId": "055166d3-6fde-498d-e621-59d2baed39ca",
+        "outputId": "01cf31ee-cf9d-457b-8feb-36d2a50baf87",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -866,7 +865,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f138cb7b-dc79-41c4-c59f-db78cf2d8083"
+        "outputId": "5d18dcd1-4a14-40d2-f0c7-8bea0f06f47d"
       },
       "outputs": [
         {
@@ -940,7 +939,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "source": [
+        "print(len(train_data))\n",
+        "print(len(val_data))\n",
+        "print(len(test_data))"
+      ],
+      "metadata": {
+        "id": "ooMZXrnTzj_9",
+        "outputId": "1046d881-6d9c-49e5-bbff-6556d3e9fde2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10000\n",
+            "466\n",
+            "467\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
       "metadata": {
         "id": "Wo6Mz24Itw7B"
       },
@@ -952,28 +978,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G8FHO7cfuHz_",
-        "outputId": "50aba66b-82be-419d-cc7a-3e91d9724f68"
+        "outputId": "8f805e0d-b6a3-4fcd-fcea-d069113b1c64"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "20000"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10000\n",
+            "466\n",
+            "467\n"
+          ]
         }
       ],
       "source": [
-        "len(train_data)"
+        "print(len(train_data))\n",
+        "print(len(val_data))\n",
+        "print(len(test_data))"
       ]
     },
     {
