Mit Colab erstellt

--- a/week6_files/seq2seq_NMT_BMT2025S_SCHAMBECK_Fabian.ipynb
+++ b/week6_files/seq2seq_NMT_BMT2025S_SCHAMBECK_Fabian.ipynb
@@ -68,7 +68,7 @@
       "execution_count": 3,
       "metadata": {
         "id": "dKtvwA_Rji-B",
-        "outputId": "acfc499a-684f-4403-d229-16c719656ca0",
+        "outputId": "35b798ab-4a34-4d87-fe92-63a1b42b546a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -79,12 +79,13 @@
           "name": "stdout",
           "text": [
             "Cloning into 'BMT_2025S'...\n",
-            "remote: Enumerating objects: 376, done.\u001b[K\n",
-            "remote: Counting objects: 100% (34/34), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (26/26), done.\u001b[K\n",
-            "remote: Total 376 (delta 21), reused 8 (delta 8), pack-reused 342 (from 4)\u001b[K\n",
-            "Receiving objects: 100% (376/376), 90.16 MiB | 12.00 MiB/s, done.\n",
-            "Resolving deltas: 100% (155/155), done.\n",
+            "remote: Enumerating objects: 380, done.\u001b[K\n",
+            "remote: Counting objects: 100% (38/38), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
+            "remote: Total 380 (delta 24), reused 8 (delta 8), pack-reused 342 (from 4)\u001b[K\n",
+            "Receiving objects: 100% (380/380), 90.16 MiB | 18.14 MiB/s, done.\n",
+            "Resolving deltas: 100% (158/158), done.\n",
+            "Updating files: 100% (43/43), done.\n",
             "/content/BMT_2025S/week6_files\n"
           ]
         }
@@ -93,7 +94,7 @@
         "#if you dont have bpe data use sacremoese tokenizer\n",
         "#!pip install sacremoses\n",
         "\n",
-        "#clone repo to access bpe files from week2_files and to put requirements.txt\n",
+        "#clone repo to access bpe files from week2_files\n",
         "!git clone https://github.com/fubotz/BMT_2025S\n",
         "%cd BMT_2025S/week6_files"
       ]
@@ -120,7 +121,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5fcd9f56-c461-456b-f322-9b11b824794b"
+        "outputId": "db9803d3-734f-4900-8ba8-90affabe18fc"
       },
       "execution_count": 5,
       "outputs": [
@@ -754,6 +755,7 @@
         "np.random.seed(SEED)\n",
         "torch.manual_seed(SEED)\n",
         "torch.cuda.manual_seed(SEED)\n",
+        "\n",
         "torch.backends.cudnn.deterministic = True"
       ]
     },
@@ -768,7 +770,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7-QhBRQ0JEwO",
-        "outputId": "582835f5-cea6-4b95-de98-e7edc5be9613"
+        "outputId": "d44d7d2b-f0e2-4a4d-ede1-802e140283af"
       },
       "execution_count": 7,
       "outputs": [
@@ -840,7 +842,7 @@
       ],
       "metadata": {
         "id": "bvQO-u6g1xB3",
-        "outputId": "01cf31ee-cf9d-457b-8feb-36d2a50baf87",
+        "outputId": "f1403478-5d49-478f-d71e-4ce6e50540ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -865,7 +867,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5d18dcd1-4a14-40d2-f0c7-8bea0f06f47d"
+        "outputId": "a351c246-1146-474c-a2f2-08362e62f556"
       },
       "outputs": [
         {
@@ -946,18 +948,18 @@
       ],
       "metadata": {
         "id": "ooMZXrnTzj_9",
-        "outputId": "1046d881-6d9c-49e5-bbff-6556d3e9fde2",
+        "outputId": "304d7add-be00-4bb1-b46b-1cb93cf4ebc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10000\n",
+            "46612\n",
             "466\n",
             "467\n"
           ]
@@ -966,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 12,
       "metadata": {
         "id": "Wo6Mz24Itw7B"
       },
@@ -978,20 +980,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G8FHO7cfuHz_",
-        "outputId": "8f805e0d-b6a3-4fcd-fcea-d069113b1c64"
+        "outputId": "e114c8cd-8127-4f8e-81be-1f4df681ff20"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10000\n",
+            "20000\n",
             "466\n",
             "467\n"
           ]
@@ -1020,7 +1022,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XNS-Dmk0i_YJ",
-        "outputId": "44350f04-030e-4767-d86d-bd6c678214b5"
+        "outputId": "f5fb030f-07ee-4403-e1bc-ca9f22512064"
       },
       "outputs": [
         {
@@ -1094,7 +1096,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 16,
       "metadata": {
         "id": "zf4mEJnhi_YK"
       },
@@ -1142,7 +1144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 17,
       "metadata": {
         "id": "kP4jL01Vi_YL"
       },
@@ -1190,7 +1192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 18,
       "metadata": {
         "id": "sFSa__e8_ZQB"
       },
@@ -1246,7 +1248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 19,
       "metadata": {
         "id": "t_J_RZPbi_YL"
       },
@@ -1326,7 +1328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 20,
       "metadata": {
         "id": "GwoMHRFxi_YL"
       },
@@ -1403,7 +1405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 21,
       "metadata": {
         "id": "5jC9nxari_YM"
       },
@@ -1436,13 +1438,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DGLEjaJu2NjY",
-        "outputId": "12bae1c4-a581-4f1d-cab8-ec3117b096dd"
+        "outputId": "bd01959d-4171-4520-f83c-f20c95a83aec"
       },
       "outputs": [
         {
@@ -1461,13 +1463,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rUD45Ys5i_YM",
-        "outputId": "c266fe00-60bd-4cfa-c2ef-a4d9ed38803d"
+        "outputId": "aaf1e65c-b578-4121-9de6-ebdc12a6baed"
       },
       "outputs": [
         {
@@ -1497,7 +1499,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 23
         }
       ],
       "source": [
@@ -1513,13 +1515,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bmY0twjqi_YM",
-        "outputId": "81a1ecd4-c40b-40ea-9a05-1732954cbe8e"
+        "outputId": "915fba4a-ec3e-4dd3-e737-47830b7684a1"
       },
       "outputs": [
         {
@@ -1548,7 +1550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 25,
       "metadata": {
         "id": "GkFpvqEii_YM"
       },
@@ -1568,7 +1570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 26,
       "metadata": {
         "id": "McD_2eGsi_YM"
       },
@@ -1584,13 +1586,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DBn2uizpi_YM",
-        "outputId": "30e88884-2a3e-4e0a-e8e8-6fc8c1dd4f99"
+        "outputId": "070f522e-0152-4be7-d85f-127780e2f4c8"
       },
       "outputs": [
         {
@@ -1607,7 +1609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 28,
       "metadata": {
         "id": "ZWBC8pDAi_YN"
       },
@@ -1661,7 +1663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 29,
       "metadata": {
         "id": "lJGxS6mFi_YN"
       },
@@ -1732,25 +1734,25 @@
       "metadata": {
         "id": "hxdAj8dxpxJh"
       },
-      "execution_count": 40,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AFGhRjIMi_YN",
-        "outputId": "f09067df-38e1-4e8d-eac3-23aa711ee845"
+        "outputId": "d7911146-cf4c-4238-c91e-8d73e9071482"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 125/125 [00:31<00:00,  3.98it/s]\n"
+            "100%|██████████| 2500/2500 [10:16<00:00,  4.05it/s]\n"
           ]
         },
         {
@@ -1758,16 +1760,16 @@
           "name": "stdout",
           "text": [
             "Epoch: 01\n",
-            "\tTrain Loss: 7.701\tTrain PPL: 2209.549\n",
-            "\t Validation Loss: 7.457\tValidation PPL: 1731.264\n",
-            "\tValidation BLEU: 0.00\n"
+            "\tTrain Loss: 6.756\tTrain PPL: 859.342\n",
+            "\t Validation Loss: 6.953\tValidation PPL: 1046.751\n",
+            "\tValidation BLEU: 0.20\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 125/125 [00:31<00:00,  4.00it/s]\n"
+            "100%|██████████| 2500/2500 [10:13<00:00,  4.08it/s]\n"
           ]
         },
         {
@@ -1775,16 +1777,16 @@
           "name": "stdout",
           "text": [
             "Epoch: 02\n",
-            "\tTrain Loss: 7.218\tTrain PPL: 1363.552\n",
-            "\t Validation Loss: 7.438\tValidation PPL: 1699.539\n",
-            "\tValidation BLEU: 0.00\n"
+            "\tTrain Loss: 5.875\tTrain PPL: 355.967\n",
+            "\t Validation Loss: 6.721\tValidation PPL: 829.868\n",
+            "\tValidation BLEU: 1.47\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 125/125 [00:31<00:00,  3.97it/s]\n"
+            "100%|██████████| 2500/2500 [10:16<00:00,  4.05it/s]\n"
           ]
         },
         {
@@ -1792,16 +1794,16 @@
           "name": "stdout",
           "text": [
             "Epoch: 03\n",
-            "\tTrain Loss: 7.064\tTrain PPL: 1169.537\n",
-            "\t Validation Loss: 7.545\tValidation PPL: 1891.274\n",
-            "\tValidation BLEU: 0.00\n"
+            "\tTrain Loss: 5.253\tTrain PPL: 191.119\n",
+            "\t Validation Loss: 6.677\tValidation PPL: 793.812\n",
+            "\tValidation BLEU: 3.05\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 125/125 [00:31<00:00,  3.94it/s]\n"
+            "100%|██████████| 2500/2500 [10:13<00:00,  4.08it/s]\n"
           ]
         },
         {
@@ -1809,16 +1811,16 @@
           "name": "stdout",
           "text": [
             "Epoch: 04\n",
-            "\tTrain Loss: 6.865\tTrain PPL: 958.539\n",
-            "\t Validation Loss: 7.504\tValidation PPL: 1814.769\n",
-            "\tValidation BLEU: 0.00\n"
+            "\tTrain Loss: 4.798\tTrain PPL: 121.234\n",
+            "\t Validation Loss: 6.736\tValidation PPL: 841.794\n",
+            "\tValidation BLEU: 3.98\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 125/125 [00:31<00:00,  3.97it/s]\n"
+            "100%|██████████| 2500/2500 [10:16<00:00,  4.05it/s]\n"
           ]
         },
         {
@@ -1826,9 +1828,9 @@
           "name": "stdout",
           "text": [
             "Epoch: 05\n",
-            "\tTrain Loss: 6.640\tTrain PPL: 764.934\n",
-            "\t Validation Loss: 7.551\tValidation PPL: 1902.677\n",
-            "\tValidation BLEU: 0.00\n"
+            "\tTrain Loss: 4.488\tTrain PPL:  88.934\n",
+            "\t Validation Loss: 6.842\tValidation PPL: 936.024\n",
+            "\tValidation BLEU: 4.35\n"
           ]
         }
       ],
@@ -1846,12 +1848,10 @@
         "\n",
         "    bleu = compute_bleu(model, valid_iter, de_vocab, device)\n",
         "\n",
-        "\n",
         "    if valid_loss < best_valid_loss or bleu > best_bleu:\n",
         "        best_valid_loss = valid_loss\n",
         "        best_bleu = bleu\n",
         "        torch.save(model.state_dict(), 'model.pt')\n",
-        "\n",
         "\n",
         "    print(f'Epoch: {epoch+1:02}')\n",
         "    print(f'\\tTrain Loss: {train_loss:.3f}\\tTrain PPL: {np.exp(train_loss):7.3f}')\n",
@@ -1861,21 +1861,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 32,
       "metadata": {
         "id": "meHcb9oOi_YN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8aba6a7b-7daf-431d-c0b6-b9ef48badfab"
+        "outputId": "f40daf46-c811-45c5-8dde-af06ab23ffc6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\tTest Loss: 7.427\tTest PPL: 1681.099\n",
-            "\tTest BLEU: 0.00\n"
+            "\tTest Loss: 6.704\tTest PPL: 815.976\n",
+            "\tTest BLEU: 4.11\n"
           ]
         }
       ],
@@ -1892,20 +1892,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#NB: bad results:\n",
-        "#solution:\n",
-        "    #increase train_data = train_data[:20000]"
-      ],
-      "metadata": {
-        "id": "J0HEYVm0u1lG"
-      },
-      "execution_count": 44,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 33,
       "metadata": {
         "id": "g7dql_q_i_YN"
       },
